@@ -3,6 +3,10 @@
 	* using CDI library version 1.5.0
 	* Version 1.5.0 released
 
+2011-03-11  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>
+
+	* sinfo:  changed output of table and code number to parameter idenifier
+	
 2011-03-09  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>
 
 	* setgrid: added parameter: dereference
